# cg

./: '  .bumpversion.cfg  .containerignore  .coveralls.yml  .dockerignore  .gitignore  .gitlint.yaml  .pre-commit-config.yaml  .testmondata  .testmondata-shm  .travis.yml  CHANGELOG.from_git.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  DEPLOYMENT.md  Dockerfile  Dockerfile-cli  Dockerfile.cli  LICENSE  MANIFEST.in  Pipfile  README.md  SUMMARY.md  delivery-report.html  f1.fasta  f2.fasta  f3.fasta  file.fasta  frankhusky.csv  frankhusky.fasta  get-analyses-housekeeper.ipynb  gisad.csv  gisaid.fasta  gisaid_uploader.authtoken  gsiad_batch.csv  gunicorn.conf.py  inbeagle  newguinea  pylintrc  (+11 more)
.configs/: pylintrc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  technical-debt.md  user-story.md  work-item.md
.github/workflows/: add-to-bl.yml  black.yml  build_and_publish.yml  build_cli_image_on_push.yml  build_container_pull.yml  build_container_release.yml  build_dockerfile_on_push.yml  build_dockerfile_on_release.yml  build_publish_cli_image.yml  bumpversion.yml  clean_cache.yml  clinical_checks.yml  code_coverage.yml  coveralls.yml  deploy-cg-hasta2-login.yml  deploy_prod.yml  deploy_stage.yml  hasta_checks.yml  installation_checks.yml  installation_tests.yml  installations.yml  keep_a_changelog.yml  lint_and_install.yml  linting.yml  pytests.yml  ruff.yml  tests_and_coverage.yml  unit_tests.yml  update_changelog.yml
alembic/: env.py
alembic/versions/: 0768c90806f5_add_illumina_flow_cell.py  080a5d300c1e_add_raredisease_to_analysis_options.py  089edc289291_add_table_customer_user.py  0baf8309d227_clinical_trials.py  0c68ea25ddaa_add_ticket_to_family.py  11555a6fb508_add_raredisease_to_analysis_options.py  1645e21f9d58_add_description_to_bed_version.py  18e3b2aba252_2024_05_22_add_yield_columns.py  1c27462b49f6_add_phenotype_groups_and_subject_id_to_sample.py  1c27462b49f6_add_phenotype_groups_to_sample.py  1dadcefd3bbf_feat_contacts_as_emails.py  201b16c45366_drop_calc_reads_columns.py  2021_02_02_6d74453565f2_add_retrieved_status_to_flowcell_table.py  2021_03_23_089edc289291_add_table_customer_user.py  2021_04_08_7e344b9438bf_petname_avatar.py  2021_04_19_1dadcefd3bbf_feat_contacts_as_emails.py  2021_05_03_ed0be7286cee_add_user_types.py  2021_05_03_ef472ce31931_add_name_for_invoice_contact.py  2021_06_30_1c27462b49f6_add_phenotype_groups_and_subject_id_to_sample.py  2021_09_28_c494649637d5_add_data_delivery_options.py  2021_12_16_f2edbd530656_convert_priority_to_enum.py  2022_01_28_c76d655c8edf_add_fastq_qc_analysis_option_to_data_.py  2022_02_10_76e8252a6efb_add_data_delivery_statina.py  2022_02_25_bf97b0121538_remove_avatars.py  2022_03_28_0baf8309d227_clinical_trials.py  2022_06_29_ddc94088be4d_adds_customer_to_customer_group_link_.py  2022_07_19_2968d39ac35f_changes_in_delivery_options.py  2022_07_22_9c9ca9407227_add_data_analysis_pon_option.py  2022_09_27_554140bc13e4_add_rnafusion_analysis_option.py  2023_04_19_9008aa5065b4_add_taxprofiler_analysis_option.py  2023_05_26_f5e0db62a5a7_update_sequencingstatistics.py  2023_06_02_869d352cc614_add_relationship_between_metrics_and_.py  2023_06_02_a34039f530c5_alter_column_types_sample_lane_.py  2023_06_29_ffb9f8ab8e62_add_temp_read_col.py  2023_07_07_68e54d17f4f3_add_is_clinical_to_customer.py  2023_09_22_c3da223e60d8_add_has_backup_field.py  2023_09_28_e853d21feaa0_add_pipeline_limitations_table.py  2023_10_05_db61c62d9bc0_add_customer_lab_contact.py  2023_10_30_b6f00cc615cf_sync_db.py  2023_10_31_9073c61bc72b_add_raredisease_to_analysis_options.py  (+171 more)
cg/: __init__.py  cli.py  commands.py  constants.py  exc.py  invoice.py  log.py  scout.py  utils.py
cg/apps/: __init__.py  admin.py  balsamic.py  bam_to_cram.py  beacon.py  constants.py  coverage.py  crunchy.py  email.py  email_ticket.py  environ.py  gens.py  gisaid.py  gt.py  hk.py  lims.py  loqus.py  madeline.py  mutacc_auto.py  nipt.py  omim.py  osticket.py  pdc.py  qc.py  scout.py  scoutapi.py  scoutold.py  scoutprod.py  stats.py  tb.py  utils.py  vogue.py
cg/cli/: add.py  analysis.py  analyze.py  archive.py  backup.py  balsamic.py  base.py  clean.py  compress.py  deliver.py  demo.py  downsample.py  events.py  export.py  get.py  import.py  import_cmd.py  microsalt.py  miprdrna.py  profile_entry_point.py  report.py  reset.py  set.py  start.py  status.py  store.py  sync.py  trailblazer.py  transfer.py  upload.py  (+4 more)
documentation/: README.md  server_info.md
scripts/: add-capture-kit-to-pools.sql  add-capture_kit-table.sql  add-cleaned_at-to-analysis.sql  add-cohorts-synopsis-phenotype_terms-to-samples.sql  add-comment-to-customer.sql  add-covid-prep_category.sql  add-created_at-updated_at-to-family_sample.sql  add-customer_group-to-customer.sql  add-data_analysis-constraint.sql  add-data_analysis-to-case.sql  add-data_analysis-to-samples.sql  add-data_analysis_to_case.py  add-delivery_report_created_at-to-analysis.sql  add-fluffy-pipeline.sql  add-loqus-upload-column.sql  add-microbial-columns-to-sample.sql  add-microbial-tables.sql  add-microbial_order_id-to-analysis.sql  add-min_depth_to_application.sql  add-organism-table.sql  add-reads-guaranteed-to-application.sql  add-retrieved-status-to-flowcell.sql  add-return-samples-to-customer.sql  add-rna-columns-to-sample.sql  add-target_caputer_bed.sql  add-updated_at-to-flowcell.sql  add-upload_started_at-to-analysis.sql  add_application_version.py  add_covid_prep_category.sql  add_loqus_upload_column.sql  alter-bed-version.sql  alter-flowcell-type.sql  calculate_avg_tat.sql  change_prep_category_on_rna_applications.sql  concatenate-balsamic-files.sh  create-flowcell-microbial-sample-table.sql  create_cases_for_microbial_orders.py  install.sh  make_customer_information_mandatory.sql  make_panels_optional_in_family.sql  (+15 more)
templates/: config.yaml
tests/: conftest.py  small_helpers.py  store_helpers.py  test_copy_novaseqx_flow_cell.py  test_demultiplexing_complete.py  test_store_helpers.py  typed_mock.py
(+3750 files in other folders)
