[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cg"
version = "64.5.1"
description = "Clinical Genomics command center"
authors = ["Clinical Genomics <support@clinicalgenomics.se>"]
readme = "README.md"
homepage = "https://github.com/Clinical-Genomics/cg"
repository = "https://github.com/Clinical-Genomics/cg"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
include = [
  "README.md",
  "cg/**/*",
  "tests/**/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Database
alembic = "*"
SQLAlchemy = "*"
PyMySQL = "*"

# CLI
click = "*"

# Server
blinker = "*"
CacheControl = "*"
Flask-Admin = "*"
Flask-CORS = "*"
Flask-Dance = "*"
Flask = "*"
Flask-WTF = "*"
WTForms = "*"
google-auth = "*"
gunicorn = "*"
requests = "*"
werkzeug = "*"

# Utils
cachetools = "*"
cryptography = "*"
coloredlogs = "*"
Jinja2 = ">=3.1.3"
lxml = "*"
marshmallow = "*"
MarkupSafe = "*"
openpyxl = "*"
packaging = "*"
pandas = "*"
paramiko = "*"
petname = "*"
psutil = "*"
pydantic = "*"
python-dateutil = "*"
PyYAML = "*"
tabulate = "*"
typing_extensions = "*"
urllib3 = "*"

# Apps
genologics = "*"
housekeeper = ">=4.11.3"
pydantic-settings = "^2.3.3"
email-validator = "^2.2.0"


[tool.poetry.dev-dependencies]
coveralls = "*"
mock = "*"
pre-commit = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest = "*"
ruff = "*"
pytest-xdist = "*"

[tool.poetry.scripts]
cg = "cg.cli.base:base"


# Configurations

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = "true"
line_length=100
multi_line_output=3
ensure_newline_before_comments = "true"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic"]
ignore = ["E501"]